[package]
name = "fullverif"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2018"

[dependencies]
itertools = "0.8"
petgraph = "0.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.7"
vcd = "0.5"
yosys-netlist-json = "0.0.2"
clap = "2.33.0"
derivative =  { git = "https://github.com/mcarton/rust-derivative" }
#derivative = "1.0.3"

flame = { version = "0.2.2", optional = true }
flamer = { version = "0.3", optional = true }

[profile.release]
debug = true


[features]
default = []
flame_it = ["flame", "flamer"]

